# xlsynth-cmake

./: .gitmodules  CMakeLists.txt
cmake/: FindDependencies.cmake  GenerateFiles.cmake  Tests.cmake
